# Intervention-project_Vehicle-Manipulator-Systems

./: .gitignore
hoi_control/: CMakeLists.txt
hoi_control/hoi_control/: lab2_rrc_methods_debug_node.py  lab2_rrc_methods_vms_node.py  lab5_joint_limits_node.py  swiftpro_robotics_rrc.py
hoi_control/hoi_control/install/: setup.zsh
hoi_control/logs/: vms_log_20260508_175254.txt
launch/: turtlebot_basic.launch.py  turtlebot_hoi_circuit1.launch.py  turtlebot_hoi_circuit2.launch.py
src/hoi_control/: CMakeLists.txt  package.xml
src/hoi_control/hoi_control/: aruco_detector.py  bezier.py  camera_intrinsics.py  config.py  controllers.py  explanation_to_some_complex_ideas.txt  fsm_handlers.py  fsm_states.py  lab2_pick_place_vms_node.py  lab2_rrc_debug_node.py  lab2_rrc_methods_debug_node.py  lab2_rrc_methods_vms_node.py  lab3_null_space_node.py  logging_utils.py  math_utils.py  rviz_markers.py  swiftpro_robotics_rrc.py  test.txt  tf_helpers.py
src/hoi_control/hoi_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/hoi_control/hoi_control/log/: latest_build
src/hoi_control/launch/: hoi_rrc_debug.launch.py
src/hoi_control/logs/: vms_log_20260508_174659.txt  vms_log_20260508_175656.txt  vms_log_20260508_180505.txt  vms_log_20260508_185603.txt  vms_log_20260508_185929.txt  vms_log_20260508_190011.txt  vms_log_20260508_190335.txt  vms_log_20260508_190550.txt  vms_log_20260508_191010.txt  vms_log_20260509_092317.txt  vms_log_20260509_095858.txt  vms_log_20260509_101403.txt  vms_log_20260509_104758.txt  vms_log_20260509_122500.txt  vms_log_20260509_123616.txt  vms_log_20260509_144537.txt  vms_log_20260509_154013.txt  vms_log_20260513_164347.txt  vms_log_20260513_191341.txt  vms_log_20260513_191629.txt  vms_log_20260513_214451.txt  vms_log_20260513_214501.txt  vms_log_20260513_214707.txt  vms_log_20260514_092320.txt  vms_log_20260514_092449.txt  vms_log_20260514_092816.txt  vms_log_20260514_093529.txt  vms_log_20260514_094227.txt  vms_log_20260514_094848.txt  vms_log_20260514_104542.txt  vms_log_20260514_122452.txt
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/hoi_control/lib/hoi_control/: lab2_kinematics_node.py  lab2_rrc_node.py  lab3_two_tasks_node.py
src/install/hoi_control/share/hoi_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/kobuki_description/share/kobuki_description/: package.sh
src/install/localization/share/localization/: package.sh
src/install/octomap_rviz_plugins/share/octomap_rviz_plugins/: local_setup.sh  package.ps1  package.sh
src/install/stonefish_ros2/lib/stonefish_ros2/: stonefish_simulator  stonefish_simulator_nogpu
src/install/stonefish_ros2/share/stonefish_ros2/: package.dsv  package.ps1  package.sh
src/install/stonefish_ros2/share/stonefish_ros2/rust/: Cargo.toml
src/install/stonefish_ros2/share/stonefish_ros2/rust/src/: srv.rs
src/install/stonefish_ros2/share/stonefish_ros2/rust/src/msg/: rmw.rs
src/install/swiftpro/share/swiftpro/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
src/install/swiftpro_description/share/swiftpro_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/turtlebot/lib/turtlebot/: swiftpro_uarm_control
src/install/turtlebot/share/turtlebot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/turtlebot_description/share/turtlebot_description/: package.ps1  (+1 more)
src/log/: latest_build
src/scan_to_cloud2/scan_to_cloud2/: scan_to_cloud_node.py
src/src/hoi_control/: CMakeLists.txt
src/src/hoi_control/hoi_control/: lab2_pick_place_vms_node.py  lab2_rrc_methods_debug_node.py  lab5_obstacle_node.py
src/src/hoi_control/logs/: vms_log_20260508_180242.txt
src/src/turtlebot_description/rviz/: turtlebot_rrt_costmap.rviz
src/src/turtlebot_simulation_1/: package.xml
src/src/turtlebot_simulation_1/launch/: turtlebot_hol_circuit2_aruco.launch.py
src/src/turtlebot_simulation_1/scenarios/: ovning.scn  turtlebot_integration.scn
src/swiftpro_description/urdf/: swiftpro.urdf.xacro
src/turtlebot_description/rviz/: turtlebot.rviz  turtlebot_rrt.rviz
src/turtlebot_simulation_1/: CMakeLists.txt
src/turtlebot_simulation_1/launch/: kobuki_basic.launch.py  kobuki_pr_lab1.launch.py  swiftpro_basic.launch.py  turtlebot_basic.launch.py  turtlebot_hoi.launch.py  turtlebot_hoi_circuit1.launch.py  turtlebot_hoi_circuit2.launch.py  turtlebot_hoi_pick_place.launch.py  turtlebot_integration.launch.py
src/turtlebot_simulation_1/scenarios/: circuit1.scn  circuit2_arucos.scn  circuit_planning.scn  kobuki_basic.scn  kobuki_hol_circuit2_arucos.scn  pr_world.scn  turtlebot_basic.scn  turtlebot_hoi.scn  turtlebot_hoi_circuit1.scn  turtlebot_hol_circuit2_aruco.scn  turtlebot_planning.scn
(+131 files in other folders)
