<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hoi_control</name>
  <version>0.1.0</version>
  <description>
    HOI Project – Kinematic control nodes for the Turtlebot2 + uArm Swift Pro
    mobile manipulator. Implements Task-Priority redundancy resolution for
    progressively complex tasks (FK, resolved-rate, null-space, joint limits,
    obstacle avoidance, mobile manipulator).
  </description>

  <maintainer email="you@udg.edu">HOI Team – Haadi / Huy / Phu</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- Simulation packages the nodes talk to -->
  <exec_depend>turtlebot_simulation</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
