[package]
name = "stonefish_ros2"
version = "1.6.0"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# ROS Dependencies
service_msgs = "*"
std_srvs = "*"
geometry_msgs = "*"
builtin_interfaces = "*"
std_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'service_msgs/serde', 'std_srvs/serde', 'geometry_msgs/serde', 'builtin_interfaces/serde', 'std_msgs/serde']

[package.metadata.rclrs]
reexport = true
